--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo-list",
+  "homepage": "https:\/\/paulodetasso.me/todo-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,10 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https:\/\/paulodetasso.me/todo-app",
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
   }
 }
